--- a/markdown笔记/面试篇/面试问题记录.md
+++ b/markdown笔记/面试篇/面试问题记录.md
@@ -118,6 +118,26 @@ ConcurrentHashMap 和 Hashtable 的区别主要体现在实现线程安全的方
 
 
 
+#### 基础
+
+##### 1、句柄 与 直接引用
+
++ 句柄
+
+  句柄通俗来讲就是指针的指针；会在JAVA堆中划出一部分[内存](https://so.csdn.net/so/search?q=内存&spm=1001.2101.3001.7020)作为句柄池，Java对象中reference中存储的就是对象的句柄地址，而句柄中包含了对象实例数据与类型数据的各自具体的地址信息；
+
+  定位对象时需要两次定位，当对象被移动时（比如GC时），只需更改句柄中的实例数据指针，而reference不需要改变。
+
+  ![img](面试问题记录.assets/20200412115543152.png)
+
++ 直接指针
+
+  对象的reference直接指向对象实例数据与类型数据的各自具体的地址信息，一次定位
+
+  ![img](面试问题记录.assets/20200412115610137.png)
+
+
+
 #### Stream
 
 ##### 1、Stream 是什么？
@@ -3988,7 +4008,7 @@ jvm有很多，不只是Hotspot，还有JRockit、J9等等
 
 1、虚拟机栈
 
-线程私有，与线程生命周期相同；为JVM执行方法的内存模型，一个方法相当于一个栈帧，方法执行则为栈帧出栈入栈的过程。其中包含局部变量表、操作数栈（栈结构进加减法时操作）、动态链接、方法出口等。
+线程私有，与线程生命周期相同；为JVM执行方法的内存模型，一个方法相当于一个栈帧，方法执行则为栈帧出栈入栈的过程。其中包含局部变量表、操作数栈（栈结构进加减法时操作）、动态链接（指向运行时常量池的方法引用）、方法出口等。
 
 + 根据不同的虚拟机栈的大小是可设置，或者可动态扩展的
 + StackOverFlowError、OutOfMemoryError
@@ -3998,22 +4018,30 @@ jvm有很多，不只是Hotspot，还有JRockit、J9等等
 
 与虚拟机栈一致，线程私有，不过为本地方法（native）的内存模型。
 
+一个 Native Method 就是一个 Java 调用非 Java 代码的接口。我们知道的 Unsafe 类就有很多本地方法。
+
 3、程序计数器
 
-线程私有、记录虚拟机执行字节码指令的地址（当前指令的地址），若native则为空，可以看线程执行字节码的行号指示器。无OOM	
+线程私有、记录虚拟机执行字节码指令的地址（当前指令的地址），若native则为空，可以看线程执行字节码的行号指示器。无OOM
+
+多线程在一个特定的时间段内只会执行其中某一个线程方法，CPU会不停的做任务切换，这样必然会导致经常中断或恢复。为了能够准确的记录各个线程正在执行的当前字节码指令地址，所以为每个线程都分配了一个PC寄存器，每个线程都独立计算，不会互相影响。
+
+
 
 4、堆
 
-线程共享的一块内存区域，存放new的对象实例和数组，是java收集器收集垃圾的重要区域，现有的分代理论将堆划分为新生代（Eden区、From Survivor区、To Survivor区）和老年代。
+线程共享的一块内存区域，内存区域的唯一目的就是存放new的对象实例和数组，是java收集器收集垃圾的重要区域，现有的分代理论将堆划分为新生代（Eden区、From Survivor区、To Survivor区）和老年代。
 
 + 新生代与老年代比例 = 1/3 : 2/3
 + Eden : from : to = 8:1:1
 
 5、方法区
 
-线程共享的，用于存放被虚拟机加载的类的元数据信息，静态变量+常量+类信息（构造方法/接口定义）+运行时常量池都存在方法区中 。若要分代，算是永久代（老年代） 
+线程共享
 
-在JDK1.8之后，元空间替代了永久代，它是对JVM规范中方法区的实现，区别在于元数据区不在虚拟机当中，而是用的本地内存，永久代在虚拟机当中，永久代逻辑结构上也属于堆，但是物理上不属于。 
+方法区（method area）只是 **JVM 规范**中定义的一个概念，用于存放被虚拟机加载的类的元数据信息，静态变量+常量+类信息（构造方法/接口定义）+运行时常量池都存在方法区中、JIT编译后的代码等数据
+
+不同的厂商有不同的实现。而**永久代（PermGen）是 Hotspot虚拟机特有的概念， Java8 的时候又被元空间**取代了，永久代和元空间都可以理解为方法区的落地实现；区别在于元数据区不在虚拟机当中，而是用的本地内存，永久代在虚拟机当中，永久代逻辑结构上也属于堆，但是物理上不属于。 
 
 
 
@@ -4105,8 +4133,8 @@ Java 虚拟机管理堆之外的内存（称为非堆内存）
 
 对象访问定位有两种
 
-+ 句柄池：句柄访问指向句柄池，句柄池中包含指向堆中对象实际内容地址与指向方法区中类型地址
-+ 直接引用：直接指向堆中对象实际内容地址，其中对象头中包含方法区中类型地址
++ 句柄池：句柄访问指向句柄池，句柄池中包含指向堆中对象实际内容地址与指向方法区中类型地址；**定位两次**
++ 直接引用：直接指向堆中对象实际内容地址，其中对象头中包含方法区中类型地址，**定位一次**
 
 
 
@@ -4439,11 +4467,18 @@ G1收集器在后台维护了一个优先列表，每次根据允许的收集时
   -XX:PretenureSizeThreshold=对象大小(单位：byte)
   ```
 
-  这个参数的默认值为0，也就是说，所有的对象创建出来之后默认都是分配到新生代的，当我们指定了大小之后，只要创建出来的对象超过设定值，那么这个对像就会直接晋升到老年代；参数只对Serial和ParNew两款收集器有效
+  **这个参数的默认值为0，也就是说，所有的对象创建出来之后默认都是分配到新生代的**，当我们指定了大小之后，只要创建出来的对象超过设定值，那么这个对像就会直接晋升到老年代；参数只对Serial和ParNew两款收集器有效
 
 + 长期存活的对象
 
-  期存活的对象进入老年代。在堆中分配内存的对象，其内存布局的对象头中（Header）包含了 GC 分代年龄标记信息。如果对象在 eden 区出生，那么它的 GC 分代年龄会初始值为 1，每熬过一次 Minor GC 而不被回收，这个值就会增加 1 岁。当它的年龄到达一定的数值时（jdk1.7 默认是 15 岁），就会晋升到老年代中。
+  期存活的对象进入老年代。在堆中分配内存的对象，其内存布局的对象头中（Header）包含了 GC 分代年龄标记信息。如果对象在 eden 区出生，那么它的 GC 分代年龄会初始值为 1，每熬过一次 Minor GC 而不被回收，这个值就会增加 1 岁。当它的年龄到达一定的数值时（jdk1.7 默认是 15 岁，以为4字节最大长度限制，最大值也是15），就会晋升到老年代中。
+
+  ```
+  # 年龄阈值可调整
+  -XX:MaxTenuringThreshold=10
+  ```
+
+  
 
 + 动态对象年龄判
 
