--- a/markdown笔记/面试篇/面试问题记录.md
+++ b/markdown笔记/面试篇/面试问题记录.md
@@ -1483,6 +1483,70 @@ public interface Callable<V> {
 
 
 
+### 18、volatile 作用
+
++ 可见性，通过volatile 修饰的共享变量会强制刷新到主内存，线程读取也强制读取主内存
+
++ 防重排序，编译器和处理器为了优化程序执行的性能而对指令序列进行重排，导致非原子操作指令排序顺序改变。volatile 修饰的共享变量会禁止重排序
+
++ volatile 实际是生成内存屏障指令，
+
+  生成指令序列的适当位置会**插入内存屏障**指令来禁止特定类型的处理器重排序，保证共享变量操作的有序性。
+
+  写操作的会让线程本地的共享内存变量写完**强制刷新到主存**。**读操作让本地线程变量无效，强制从主内存读取**，保证了共享内存变量的可见性。
+
+懒汉单例模式
+
+```
+public class Singleton {
+       private static volatile Singleton instance = null;
+       private Singleton() {
+       };
+       public static synchronized Singleton getInstance() {
+              if (instance == null) {
+                     synchronized (instance) {
+                           if (instance == null) {
+                                  instance = new Singleton();
+                           }
+                     }
+              }
+              return instance;
+       }
+}
+```
+
++ new Object 不是一个原子性操作，实际分为3步：1）分配堆内存空间  2）初始化对象  3）将内存空间的地址赋值给 singleton；
++ volatile 禁止指令从排序，2）和 3） 步骤会重排序，导致 singleton 指向未进行初始化的地址，多线程情况下会直接返回未进行初始化的singleton对象
++ synchronized ：new Object 不是一个原子性操作, 需要加锁确保一个线程完全生成了一个实例对象，再加上锁的前后double check  防止多线程并发时创建多个实例对象，
+
+
+
+19、线程中断
+
+
+
++ 调用一个线程的 interrupt() 来中断该线程，如果该线程处于阻塞、限期等待或者无限期等待状态，会抛出InterruptedException 异常中断 ，如 Thread.sleep() 会抛出该异常，不能中断 I/O 阻塞和 synchronized 锁阻塞。
+
++ interrupted(), 若在run()方法内执行死循环，无可抛出InterruptedException 异常的代码端，使用interrupted()判断中断状态；调用一个线程的 interrupt() 来中断该线程时会标记中断状态
+
+  ```
+  private static class MyThread2 extends Thread {
+          @Override
+          public void run() {
+              while (!interrupted()) {
+                  // ..
+              }
+              System.out.println("Thread end");
+          }
+  }
+  ```
+
+  
+
++ Executor.shutdonNow(); 相当于调用每个线程的 interrupt() 方法。
+
+
+
 ## Spring 篇
 
 ### IOC
@@ -4140,9 +4204,26 @@ Java 虚拟机管理堆之外的内存（称为非堆内存）
 
 #### 8、Java 的4种引用方式？
 
+无论是通过引用计算算法判断对象的引用数量，还是通过可达性分析算法判断对象是否可达，判定对象是否可被回收都与引用有关。
+
 + 强引用： new Object(), Jvm不会回收
-+ 软引用（SoftReference）,有用非必须，内存不够时GC
-+ 弱引用（WeakReference）,比软引用更弱，下一次GC
+
++ 软引用（SoftReference）,有用非必须，内存不够时GC 会回收
+
+  ```
+  Object obj = new Object();
+  SoftReference<Object> sf = new SoftReference<Object>(obj);
+  obj = null;  // 使对象只被软引用关联
+  ```
+
++ 弱引用（WeakReference）,比软引用更弱，下一次GC一定会被回收
+
+  ```
+  Object obj = new Object();
+  WeakReference<Object> wf = new WeakReference<Object>(obj);
+  obj = null;
+  ```
+
 + 虚引用（PhantomReference）,用处不大，无法通过虚引用访问，GC有个系统通知。
 
 
@@ -4226,6 +4307,23 @@ Java程序中加载的每一个类都以其全限定名（包名+类名）标识
 
 
 
+#### 13、什么是 TLAB （Thread Local Allocation Buffer）?
+
+- 从内存模型而不是垃圾回收的角度，对 Eden 区域继续进行划分，JVM 为每个线程分配了一个私有缓存区域，它包含在 Eden 空间内
+- 堆区是线程共享的，任何线程都可以访问到堆区中的共享数据，多线程同时分配内存时，使用 TLAB 可以避免一系列的非线程安全问题，同时还能提升内存分配的吞吐量，因此我们可以将这种内存分配方式称为**快速分配策略**
+- 由于对象实例的创建在 JVM 中非常频繁，因此在并发环境下从堆区中划分内存空间是线程不安全的, 避免多个线程操作同一地址，需要使用加锁等机制，进而影响分配速度
+- OpenJDK 衍生出来的 JVM 大都提供了 TLAB 设计
+
+尽管不是所有的对象实例都能够在 TLAB 中成功分配内存，但 JVM 确实是将 TLAB 作为内存分配的首选。
+
+在程序中，可以通过 `-XX:UseTLAB` 设置是否开启 TLAB 空间。默认占有整个 Eden 空间的 1%
+
+
+
+
+
+
+
 ### GC垃圾收集器
 
 #### 1、怎样判定为垃圾？
@@ -4239,19 +4337,19 @@ Java程序中加载的每一个类都以其全限定名（包名+类名）标识
 
 + 可达性分析
 
-  通过一系列的名为“GC Roots”的对象作为起始点，从这些节点开始向下搜索，搜索所走过
-  的路径称为引用链（Reference Chain） ，当某些对象无法可达时，则认为是垃圾。
+  **通过 GC Roots 作为起始点进行搜索，能够到达到的对象都是存活的，不可达的对象可被回收。**
+  
 
-  GC Roots根节点：
+GC Roots根节点：
 
-  + 虚拟机栈的本地变量表
++ 虚拟机栈的本地变量表
   + 本地方法栈中的变量
   + 方法区中 static 引用，常量引用，常量池
   + Thread 锁对象
 
 #### 2、GC垃圾收集算法？
 
-分代收集理论
+##### **分代收集理论**
 
 一般将java堆分为新生代和老年代，这样我们就可以根据**各个年代的特点选择合适的垃圾收集算法**。
 
@@ -4259,40 +4357,50 @@ Java程序中加载的每一个类都以其全限定名（包名+类名）标识
 
 ![1590501451163](typora-user-images/1590501451163.png)
 
-回收方法包括
+针对 HotSpot VM 的实现，它里面的 GC 按照回收区域又分为两大类：部分收集（Partial GC），整堆收集（Full GC）
 
-+ young gc (Minor gc) 新生代垃圾收集
-+ old gc （Major gc）老年代垃圾回收
-+ Mixed GC 混合收集 整个新生代+部分老年代 , G1收集器才有
-+ full GC 整堆GC 收集整个Java堆和方法区的垃圾回收 
+- 部分收集：不是完整收集整个 Java 堆的垃圾收集。其中又分为： 
+  - 新生代收集（Minor GC/Young GC）：只是新生代的垃圾收集
+  - 老年代收集（Major GC/Old GC）：只是老年代的垃圾收集 
+    - 目前，只有 CMS GC 会有单独收集老年代的行为
+    - 很多时候 Major GC 会和 Full GC 混合使用，需要具体分辨是老年代回收还是整堆回收
+  - 混合收集（Mixed GC）：收集整个新生代以及部分老年代的垃圾收集 
+    - 目前只有 G1 GC 会有这种行为
+- 整堆收集（Full GC）：收集整个 Java 堆和方法区的垃圾
 
 
 
-
-
-
+##### **GC垃圾收集算法**
 
 + 标记-清除
 
-  分为标记和清除两个阶段。首先标记出所有需要回收的对象，在标记完成后统一回收被标记的对象 。
+分为标记和清除两个阶段。首先标记出所有需要回收的对象，在标记完成后统一回收被标记的对象 。
 
-  产生大量内存碎片。
+产生大量内存碎片。
 
 + 复制算法
 
-  将可用内存按容量划分为大小相等的两块，每次只使用其中一块。当这一块的内存用完了，就将存活着的对象复制到另一块上面，然后再把已经使用过的内存空间一次清理掉。 
+将可用内存按容量划分为大小相等的两块，每次只使用其中一块。当这一块的内存用完了，就将存活着的对象复制到另一块上面，然后再把已经使用过的内存空间一次清理掉。 
 
-  将内存缩小为原来的一半。在对象存活率较高时，需要执行较多的复制操作，效率会变低。 
+将内存缩小为原来的一半。在对象存活率较高时，需要执行较多的复制操作，效率会变低。 
 
 + 标记-整理
 
-  不是直接对可回收对象进行清理，而是让所有存活的对象向一端移动，然后直接清理掉边界以外的内存。 
+不是直接对可回收对象进行清理，而是让所有存活的对象向一端移动，然后直接清理掉边界以外的内存。 
 
-  
++ 分带收集算法
+  - 新生代使用: 复制算法
+  - 老年代使用: 标记 - 清除 或者 标记 - 整理 算法
 
-  
 
-  
+
+#### 什么时候进行full GC
+
++ System.gc(), 建议虚拟机执行 Full GC，但是虚拟机不一定真正去执行。不建议使用这种方式，而是让虚拟机管理内存。
++ 老年代空间不足，大对象进入 、 长期存活对象升老年代、采用复制算法时Survivor空间不足，老年代担保、发现老年代空间不足触发full gc
++ JDK 1.7 及以前的永久代空间不足
+
+
 
 #### 3、经典垃圾收集器
 
@@ -4459,7 +4567,7 @@ G1收集器在后台维护了一个优先列表，每次根据允许的收集时
 
 #### 6、java对象从新生代晋升到老年代的方式
 
-+ 新生代内存不足，老年代担保机制，直接进入老年代
++ 新生代 Survivor 空间不足时，老年代担保机制，直接进入老年代
 
 + 大对象直接进入老年代, 用户设定参数指定大对象byte
 
