--- a/markdown笔记/面试篇/面试问题记录.md
+++ b/markdown笔记/面试篇/面试问题记录.md
@@ -7234,9 +7234,11 @@ Saga 属于长事务解决方案，其核心思想史将长事务拆分为多个
 
 这个阶段主要是秒杀活动的过程，会产生瞬时的高并发流量，对系统资源会造成巨大的冲击，所以，在秒杀阶段一定要做好系统防护。
 
-###### 验证码防刷
+###### 验证码防刷+ URL 刷新
 
-预准备静态验证码数据
+预准备静态验证码数据，秒杀开始时重置秒杀提交URL
+
+
 
 ###### 网关前置限流
 
@@ -7379,6 +7381,34 @@ Saga 属于长事务解决方案，其核心思想史将长事务拆分为多个
   ```
 
   
+
+
+
+## 项目
+
+行程卡 2.0 改造
+
++ gateway网关+ sentinel 限流；解密jettoken验证（对称）; 登录国标 sm4
+
+  用户短信登录，生成专属token, 对称密钥 通过短信服务获取
+
++ 服务分离（资源分配）
+
+  聚合服务，移动服务，联通服务，电信服务 ； 3：1：1 资源分配 50台 （需要计算qps）
+
++ 运营商接口超时时间、sentinel 熔断快速失败
+
++ es 缓存 （3台节点 64G）
+
+  + 数据量估算 ：主要存3个字段 手机号、城市码、刷新时间戳 ； 3 * 32 < 100个字节， 10亿条数据 100G 左右
+  + 6个主分片 +6个副本分片
+  + 64G filesystem cache 足够
+
++ 后续，定时 - 预热 数据
+
+  
+
+2、
 
 
 
