--- a/markdown笔记/面试篇/面试问题记录.md
+++ b/markdown笔记/面试篇/面试问题记录.md
@@ -1563,6 +1563,21 @@ public class Singleton {
 
 
 
+### 20、ThreadLocal
+
+线程变量，ThreadLocal变量在每个线程中都创建了一个副本，线程间相互独立；且该副本只能由当前 Thread 使用
+不存在线程共享的问题，线程安全
+Threadlocl是作为当前线程中属性ThreadLocalMap集合中的某一个Entry的key值Entry（threadlocl,value），
+虽然不同的线程之间threadlocal这个key值是一样，但是不同的线程所拥有的ThreadLocalMap是独一无二的，
+也就是不同的线程间同一个ThreadLocal（key）对应存储的值(value)不一样，从而到达了线程间变量隔离的目的，
+但是在同一个线程中这个value变量地址是一样的。
+
+Entry的key 与 ThreadLocal 为弱引用；防止 ThreadLocal 不被回收；因为对象的ThreadLocal不使用了，
+但是线程存在，则ThreadLocalMap不会回收，ThreadLocalMap.Entry.key 不会回收；用弱引用就会回收
+所以会出现 key=null 的Entry；
+
+ThreadLocal进行get(), set(), remove()时会清除线程ThreadLocalMap里所有key为null的value。也需要在程序中手动remove()
+
 
 
 ## Spring 篇
@@ -4957,7 +4972,40 @@ Sun JDK监控和故障处理命令有jps jstat jmap jhat jstack jinfo
 
 
 
+#### 4、MetaSpace OOM 异常
+
+OOM 异常：MetaSpace
++ MetaSpace 大小设置不足
++ metaspace存放的都是创建的类信息，常量池，注解，方法计数器，大概率就是创建了大量的类且没有被回收
+
 ​    
+
+1）查看 JVisualVM： MetaSpace 视图每隔一定时间上一个台阶，不回收
+
+2）jmap 获取 dump 文件，查看gc日志，发现Full GC 中 MetaSpace 回收内存根本没有减少
+
+```
+jmap -dump:live,format=b,file=m.hprof 18071 ；
+```
+
+```
+   35406.969: [Full GC (Ergonomics) [PSYoungGen: 452036K->0K(4116480K)] [ParOldGen: 8378221K->706275K(8388608K)] 8373957K->706275K(12505088K), [Metaspace: 155472K->155472K(1185792K)], 1.3947156 secs] [Times: user=3.73 sys=0.21, real=1.39 secs]
+
+```
+
+3）jmap命令将内存dump出来后，利用mat工具打开，发现其classLoader数量特别多
+
+- groovyClassLoader - groovy升级到2.5
+
+```
+jmap -histo pid|head -n 10 查看前10位
+jmap -histo pid | sort -k 2 -g -r 查看对象数最多的对象，按降序输出
+jmap -histo pid | sort -k 3 -g -r 查看内存的对象，按降序输出
+```
+
+<img src="面试问题记录.assets/74f42fa2b48ceaff869472f6061c1c7b.jpg" alt="">
+
+4）调大MetaSpace=512M
 
 ## Tomcat 篇
 
@@ -7400,9 +7448,30 @@ Saga 属于长事务解决方案，其核心思想史将长事务拆分为多个
 
 + 服务分离（资源分配）
 
-  聚合服务，移动服务，联通服务，电信服务 ； 3：1：1 资源分配 50台 （需要计算qps）
+  聚合服务，移动服务，联通服务，电信服务 ； 3：1：1 资源分配 20台 （需要计算1000qps）
+
++ springboot 内置tomcat 参数调整
+
+  ```
+  # Tomcat线程池参数调节 SpringBoot 版本不同Tomcat的参数名也不同  (具体参考源码) 
+  server:
+    tomcat:
+      # 最大连接数
+      max-connections:  10000
+      # 等待队列长度，默认100队列也做缓冲池用
+      accept-count: 100
+      #　链接超时时间
+      connection-timeout: 5000ms
+      # 最大线程数
+      max-threads: 400
+      # 最小线程空闲数据
+      min-spare-threads: 30
+  
+  ```
 
 + 运营商接口超时时间、sentinel 熔断快速失败
+
++ 取消mysql 查询中高风险编码，修改为 nocas 动态配置
 
 + es 缓存 （3台节点 64G）
 
@@ -7919,3 +7988,10 @@ rule_files:
   [ - <filepath_glob> ... ]
 ```
 
+
+
+
+
+## Kuberneters
+
+Kubernetes中提供configmap，用来管理应用的配置，configmap具备热更新的能力，但只有通过目录挂载的configmap才具备热更新能力，其余通过环境变量，通过subPath挂载的文件都不能动态更新。这篇文章里我们来看看configmap热更新的原理，以及为什么只有目录形式挂载才具备热更新能力。
