--- a/markdown笔记/面试篇/面试问题记录.md
+++ b/markdown笔记/面试篇/面试问题记录.md
@@ -7438,57 +7438,6 @@ Saga 属于长事务解决方案，其核心思想史将长事务拆分为多个
 
 
 
-## 项目
-
-行程卡 2.0 改造
-
-+ gateway网关+ sentinel 限流；解密jettoken验证（对称）; 登录国标 sm4
-
-  用户短信登录，生成专属token, 对称密钥 通过短信服务获取
-
-+ 服务分离（资源分配）
-
-  聚合服务，移动服务，联通服务，电信服务 ； 3：1：1 资源分配 20台 （需要计算1000qps）
-
-+ springboot 内置tomcat 参数调整
-
-  ```
-  # Tomcat线程池参数调节 SpringBoot 版本不同Tomcat的参数名也不同  (具体参考源码) 
-  server:
-    tomcat:
-      # 最大连接数
-      max-connections:  10000
-      # 等待队列长度，默认100队列也做缓冲池用
-      accept-count: 100
-      #　链接超时时间
-      connection-timeout: 5000ms
-      # 最大线程数
-      max-threads: 400
-      # 最小线程空闲数据
-      min-spare-threads: 30
-  
-  ```
-
-+ 运营商接口超时时间、sentinel 熔断快速失败
-
-+ 取消mysql 查询中高风险编码，修改为 nocas 动态配置
-
-+ es 缓存 （3台节点 64G）
-
-  + 数据量估算 ：主要存3个字段 手机号、城市码、刷新时间戳 ； 3 * 32 < 100个字节， 10亿条数据 100G 左右
-  + 6个主分片 +6个副本分片
-  + 64G filesystem cache 足够
-
-+ 后续，定时 - 预热 数据
-
-  
-
-2、
-
-
-
-
-
 ## 容器云
 
 ### 日志系统-Elk
@@ -7995,3 +7944,76 @@ rule_files:
 ## Kuberneters
 
 Kubernetes中提供configmap，用来管理应用的配置，configmap具备热更新的能力，但只有通过目录挂载的configmap才具备热更新能力，其余通过环境变量，通过subPath挂载的文件都不能动态更新。这篇文章里我们来看看configmap热更新的原理，以及为什么只有目录形式挂载才具备热更新能力。
+
+
+
+
+
+## 项目篇
+
+行程卡 2.0 改造
+
+- gateway网关+ sentinel 限流；解密jettoken验证（对称）; 登录国标 sm4
+
+  用户短信登录，生成专属token, 对称密钥 通过短信服务获取
+
+- 服务分离（资源分配）
+
+  聚合服务，移动服务，联通服务，电信服务 ； 3：1：1 资源分配 20台 （需要计算1000qps）
+
+- springboot 内置tomcat 参数调整
+
+  ```
+  # Tomcat线程池参数调节 SpringBoot 版本不同Tomcat的参数名也不同  (具体参考源码) 
+  server:
+    tomcat:
+      # 最大连接数
+      max-connections:  10000
+      # 等待队列长度，默认100队列也做缓冲池用
+      accept-count: 100
+      #　链接超时时间
+      connection-timeout: 5000ms
+      # 最大线程数
+      max-threads: 400
+      # 最小线程空闲数据
+      min-spare-threads: 30
+  
+  ```
+
+- 运营商接口超时时间、sentinel 熔断快速失败
+
+- 取消mysql 查询中高风险编码，修改为 nocas 动态配置
+
+- es 缓存 （3台节点 64G）
+
+  - 数据量估算 ：主要存3个字段 手机号、城市码、刷新时间戳 ； 3 * 32 < 100个字节， 10亿条数据 100G 左右
+  - 6个主分片 +6个副本分片
+  - 64G filesystem cache 足够
+
+- 后续，定时 - 预热 数据
+
+  
+
+2、
+
+
+
+
+
+
+
+## 问答篇
+
+职业方向
+ 希望在技术领域有些作为，以技术leader的身份带领团队设计并落地大型平台系统，创造优秀的产品解决方案
+
+过去几年的成长：
+1） 技术方面：参与落地大并发高可用的项目，掌握了Kuberneters容器编排技术，考了cka证书
+2） 团队合作：互联网公司的制度与节奏，与多部门多产品线 上下游的合作与沟通；
+3） 项目管理：担任系统负责人，协调资源，排需求与研发计划，完成既定目标
+3） 业务思维：从业务的角度去思考问题，将技术与业务结合起来，创造价值。更了解产品与竞品和市场
+
+对团队的期待：
+1） 和谐友好，积极向上的气氛
+2） 热爱技术，热爱分享的团队
+
