--- a/markdown笔记/面试篇/面试问题记录.md
+++ b/markdown笔记/面试篇/面试问题记录.md
@@ -378,6 +378,42 @@ bootstrap 配置文件有以下几个应用场景。
 
 
 
+#### 7、Spring Boot 自动配置的原理
+
+在Spring程序main方法中，添加@SpringBootApplication或者@EnableAutoConfiguration会自动去maven中读取每个starter中的spring.factories文件，该文件里配置了所有需要被创建的Spring容器中的bean
+
+
+
+#### 8、Spring Boot的核心注解是哪些？他主由哪几个注解组成的？
+
+启动类上面的注解是@SpringBootApplication，他也是SpringBoot的核心注解，主要组合包含了以下3个注解：
+
+- @SpringBootConfiguration：组合了@Configuration注解，实现配置文件的功能；
+- @EnableAutoConfiguration：打开自动配置的功能，也可以关闭某个自动配置的选项，如关闭数据源自动配置的功能：
+- @SpringBootApplication(exclude={DataSourceAutoConfiguration.class})；
+- @ComponentScan：Spring组件扫描。
+
+
+
+#### 9、spring-boot-starter-parent有什么作用？
+
+新建一个SpringBoot项目，默认都是有parent的，这个parent就是spring-boot-starter-parent，spring-boot-starter-parent主要有如下作用：
+
+- 定义了Java编译版本
+- 使用UTF-8格式编码
+- 继承自spring-boor-dependencies，这里面定义了依赖的版本，也正是因为继承了这个依赖，所以我们在写依赖时才不需要写版本号
+- 执行打包操作的配置
+- 自动化的资源过滤
+- 自动化的插件配置
+
+
+
+#### 10、SpringBoot 打成jar和普通的jar有什么区别？
+
+pring Boot 项目最终打包成的 jar 是可执行 jar ，这种 jar 可以直接通过java -jar xxx.jar命令来运行，这种 jar 不可以作为普通的 jar 被其他项目依赖，即使依赖了也无法使用其中的类。
+
+Spring Boot 的 jar 无法被其他项目依赖，主要还是他和普通 jar 的结构不同。普通的 jar 包，解压后直接就是包名，包里就是我们的代码，而 Spring Boot 打包成的可执行 jar 解压后，在 \BOOT-INF\classes目录下才是我们的代码，因此无法被直接引用。如果非要引用，可以在 pom.xml 文件中增加配置，将 Spring Boot 项目打包成两个 jar ，一个可执行，一个可引用。
+
 
 
 ### Spring Cloud
@@ -7363,9 +7399,13 @@ Saga 属于长事务解决方案，其核心思想史将长事务拆分为多个
 
 
 
-### 4、大数据量查询高频词
+### 4、大数据量查询高频词， 对比
 
-有一个 1GB 大小的文件，文件里每一行是一个词，每个词的大小不超过 16B，内存大小限制是
+主要思路：分治+合并；通过将大文件通过一定hash规则映射为小文件，处理小文件 top k; 再合并结果集（堆）
+
+
+
+1）有一个 1GB 大小的文件，文件里每一行是一个词，每个词的大小不超过 16B，内存大小限制是
 1MB，要求返回频数最高的 100 个词(Top 100)。 
 
 采用分治的思路
@@ -7376,11 +7416,31 @@ Saga 属于长事务解决方案，其核心思想史将长事务拆分为多个
 
 
 
+2）给定a、b两个文件，各存放50亿个url，每个url各占64字节，内存限制是4G，让你找出a、b文件共同的url?
+
++ 50亿 * 64字节 = 320G; 分 1000 份；每份320M
++ a、b 两文件进行分治，读取大文件进行 hash(url) % 1000 映射；得到各1000个文件；且a1=b1 小文件一一对应
++ 读取对应小文件进行一一对比，可使用 HashMap ; 也可先进行排序 再使用双指针进行对比
+
+
+
 ### 5、如何在大数据中是否存在某一个数
 
 + 分治法：将大数据量分片为小数据量
 + 位图法：就是用一个或多个 bit 来标记某个元素对应的值，而键就是该元素。采用位作为单位来
   存储数据，可以大大节省存储空间。 
+
+如：给20亿个不重复的unsigned int的整数，没排过序的，然后再给一个数，如何快速判断这个数是否在那20亿个数当中?
+
+利用Bitmap-位图，位1表示存在，位0表示不存在；1字节=8位（1 byte = 8 bit）; 
+
+20亿个数就是20亿位，占用空间约为  (2000000000/8/1024/1024/1024)≈0.233G
+java 中int 表示 4 byte = 32 位；1个int占32位，那么我们只需要申请一个int数组长度为 int tmp[1+N/32] 即可存储，其中N表示要存储的这些数中的最大值
+   tmp[0]：可以表示0~31
+   tmp[1]：可以表示32~63
+   tmp[2]：可以表示64~95
+
+只需要先确定到数组中的一个int值，再在此int值上32位上代表该数的位置为1
 
 
 
@@ -7435,6 +7495,15 @@ Saga 属于长事务解决方案，其核心思想史将长事务拆分为多个
   ```
 
   
+
+### 7、接口设计原则
+
++ 接口版本、命名规范
++ 入参、出参规范
++ 接口安全验证及权限的控制
++ 接口幂等：接口可重复调用，调用结果一致
++ 接口日志
++ 详细准确的接口文档
 
 
 
@@ -7993,5 +8062,83 @@ rule_files:
 
 
 ## Kuberneters
+
+### kubernetes 是什么
+
+容器编排管理框架，目的是实现资源管理的自动化，主要提供了如下的主要功能：
+
+- **自我修复**：一旦某一个容器崩溃，能够在1秒中左右迅速启动新的容器
+- **弹性伸缩**：可以根据需要，自动对集群中正在运行的容器数量进行调整
+- **服务发现**：服务可以通过自动发现的形式找到它所依赖的服务
+- **负载均衡**：如果一个服务起动了多个容器，能够自动实现请求的负载均衡
+- **版本回退**：如果发现新发布的程序版本有问题，可以立即回退到原来的版本
+- **存储编排**：可以根据容器自身的需求自动创建存储卷
+
+
+
+一个kubernetes集群主要是由**控制节点(master)**、**工作节点(node)**构成，每个节点上都会安装不同的组件。
+
+**master：集群的控制平面，负责集群的决策 ( 管理 )**
+
+> **ApiServer** : 资源操作的唯一入口，接收用户输入的命令，提供认证、授权、API注册和发现等机制
+>
+> **Scheduler** : 负责集群资源调度，按照预定的调度策略将Pod调度到相应的node节点上
+>
+> **ControllerManager** : 负责维护集群的状态，比如程序部署安排、故障检测、自动扩展、滚动更新等
+>
+> **Etcd** ：负责存储集群中各种资源对象的信息
+
+**node：集群的数据平面，负责为容器提供运行环境 ( 干活 )**
+
+> **Kubelet** : 负责维护容器的生命周期，即通过控制docker，来创建、更新、销毁容器
+>
+> **KubeProxy** : 负责提供集群内部的服务发现和负载均衡
+>
+> **Docker** : 负责节点上容器的各种操作
+
+
+
+### Pod 是什么
+
+Pod 是 Kubernetes 的最小工作单元。每个 Pod 包含一个或多个容器。Pod 中的容器会作为一个整体被 Master 调度到一个 Node 上运行。
+
+`可管理性`: 有些容器天生就是需要紧密联系，一起工作。Pod 提供了比容器更高层次的抽象，将它们封装到一个部署单元中。Kubernetes 以 Pod 为最小单位进行调度、扩展、共享资源、管理生命周期。
+
+`通信和资源共享`: Pod 中的所有容器使用同一个网络 namespace，即相同的 IP 地址和 Port 空间。它们可以直接用 localhost 通信。同样的，这些容器可以共享存储，当 Kubernetes 挂载 volume 到 Pod，本质上是将 volume 挂载到 Pod 中的每一个容器
+
+
+
+### controller 是什么
+
+Kubernetes 通常不会直接创建 Pod，而是通过 Controller 来管理 Pod 的。Controller 中定义了 Pod 的部署特性，比如有几个副本，在什么样的 Node 上运行等。为了满足不同的业务场景，Kubernetes 提供了多种 Controller，包括 Deployment、ReplicaSet、DaemonSet、StatefuleSet、Job 等。
+
++ `Deployment`： Deployment 是最常用的 Controller，比如我们可以通过创建 Deployment 来部署应用的。Deployment 可以管理 Pod 的多个副本，并确保 Pod 按照期望的状态运行。
+
++ `ReplicaSet`： ReplicaSet 实现了 Pod 的多副本管理。使用 Deployment 时会自动创建 ReplicaSet，也就是说 Deployment 是通过 ReplicaSet 来管理 Pod 的多个副本，我们通常不需要直接使用 ReplicaSet。
+
++ `DaemonSet`： DaemonSet 用于每个 Node 最多只运行一个 Pod 副本的场景。正如其名称所揭示的，DaemonSet 通常用于运行 daemon。
+
++ `StatefuleSet`： StatefuleSet 能够保证 Pod 的每个副本在整个生命周期中名称是不变的。而其他 Controller 不提供这个功能，当某个 Pod 发生故障需要删除并重新启动时，Pod 的名称会发生变化。同时 StatefuleSet 会保证副本按照固定的顺序启动、更新或者删除。
+
++ `Job`： Job 用于运行结束就删除的应用。而其他 Controller 中的 Pod 通常是长期持续运行。
+
+
+
+### **Namespace** 是什么
+
+Namespace 可以将一个物理的 Cluster 逻辑上划分成多个虚拟 Cluster，每个 Cluster 就是一个 Namespace。不同 Namespace 里的资源是完全隔离的。
+
++ default：创建资源时如果不指定，将被放到这个 Namespace 中。
++ kube-system：Kubernetes 自己创建的系统资源将放到这个 Namespace 中。
+
+
+
+### Service 是什么
+
+Deployment 可以部署多个副本，每个 Pod 都有自己的 IP。而 Pod 很可能会被频繁地销毁和重启，它们的 IP 会发生变化，用 IP 来访问 不太现实。Service 定义了外界访问一组特定 Pod 的方式。Service 有自己的 IP 和端口，Service 为 Pod 提供了负载均衡。
+
+
+
+### configmap 热更新能力
 
 Kubernetes中提供configmap，用来管理应用的配置，configmap具备热更新的能力，但只有通过目录挂载的configmap才具备热更新能力，其余通过环境变量，通过subPath挂载的文件都不能动态更新。这篇文章里我们来看看configmap热更新的原理，以及为什么只有目录形式挂载才具备热更新能力。
