--- a/markdown笔记/面试篇/面试问题记录.md
+++ b/markdown笔记/面试篇/面试问题记录.md
@@ -138,6 +138,50 @@ ConcurrentHashMap 和 Hashtable 的区别主要体现在实现线程安全的方
 
 
 
+##### 2、java 的 SPI 机制
+
+SPI（Service Provider Interface），是JDK内置的一种 服务提供发现机制，可以用来启用框架扩展和替换组件，主要是被框架的开发人员使用，比如java.sql.Driver接口，其他不同厂商可以针对同一接口做出不同的实现，MySQL和PostgreSQL都有不同的实现提供给用户，而Java的SPI机制可以为某个接口寻找服务实现。Java中SPI机制主要思想是将装配的控制权移到程序之外，在模块化设计中这个机制尤其重要，其核心思想就是 **解耦**。
+
+当服务的提供者提供了一种接口的实现之后，需要在classpath下的`META-INF/services/`目录里创建一个以服务接口命名的文件，这个文件里的内容就是这个接口的具体的实现类。当其他的程序需要这个服务的时候，就可以通过查找这个jar包（一般都是以jar包做依赖）的`META-INF/services/`中的配置文件，配置文件中有接口的具体实现类名，可以根据这个类名进行加载实例化，就可以使用该服务了。JDK中查找服务的实现的工具类是：`java.util.ServiceLoader`。
+
+
+
+例如：JDBC DriverManager，JDBC4.0之前 Class.forName("com.mysql.jdbc.Driver")这句先加载数据库相关的驱动，后续使用SPI机制不需要了；在mysql的jar包`mysql-connector-java-6.0.6.jar`中，可以找到`META-INF/services`目录，该目录下会有一个名字为`java.sql.Driver`的文件，文件内容是`com.mysql.cj.jdbc.Driver`，这里面的内容就是针对Java中定义的接口的实现。
+
+
+
+##### 3、Lambda 表达式
+
+Lambda表达式是JAVA8中提供的一种新的特性，是一个匿名函数方法。可以把Lambda表达式理解为一段可以传递的代码，可以写出更简洁、更灵活的代码。
+
+Lambda表达式可以认为是对匿名内部类的一种简化，但不是所有的匿名内部类都可以简化为Lambda表达式。
+
+只有**函数式接口的匿名内部类**才可以使用Lambda表达式来进行简化。
+
+- 函数式接口不同于普通接口，较为特殊化。接口当中只有一个抽象方法是需要我们去实现的，Lambda表达式正好是针对这个唯一的抽象方法使用。
+
+  ```
+  public class TestDemo {
+      
+      # 匿名内部方式创建线程
+      public static void testThread(String[] args) {
+          Thread t1=new Thread(new Runnable() {
+              @Override//这里重写Runnable接口里面的run()方法
+              public void run() {
+                  System.out.println("匿名内部类方式-启动线程");
+              }
+          });
+          t1.start();
+      }
+  }
+  
+  
+  ```
+
+  
+
+
+
 #### Stream
 
 ##### 1、Stream 是什么？
