--- a/markdown笔记/面试篇/面试问题记录.md
+++ b/markdown笔记/面试篇/面试问题记录.md
@@ -2656,7 +2656,7 @@ public class ChildSpringServer {
 
 
 
-17、过滤器 Filter 与 拦截器 Intercepter 的区别
+### 17、过滤器 Filter 与 拦截器 Intercepter 的区别
 
 + 作用范围不同：
 
@@ -2677,6 +2677,49 @@ public class ChildSpringServer {
   Filter 根据函数回调， FilterChain.doFilter(); 生成一个串调用链
 
   拦截器(Interceptor)的实现原理基于面向切面编程（AOP）思想，在Spring容器中创建拦截器实例，并将拦截器注册到拦截器链中，形成拦截器链。，主要通反射机制出执行handler + 拦截链交织在一起
+
+
+
+### 18、SpringBoot 自动装配的原理
+
+1、@SpringBootApplication 注解中 @EnableAutoConfiguration 注解
+
+2、@EnableAutoConfiguration 注解上有 @Import({AutoConfigurationImportSelector.class}) 
+   导入AutoConfigurationImportSelector类
+
+3、AutoConfigurationImportSelector 继承了 DeferredImportSelector 接口，在 Spring 生命周期处理 BeanFactoryPostProcessors 的时候会对配置信息进行后置处理，这是会调用到 AutoConfigurationImportSelector.process 方法
+   此时自动配置的解析晚于主配置的解析
+
+4、AutoConfigurationImportSelector.selectImports 方法中会读取 META-INF/spring.factories 配置文件中的内容为 Key-Value 形式，读取完后值返回 key = EnableAutoConfiguration 对应的配置类信息，
+   进行 @ConditionalOnXXX 条件筛选后，保存到 autoConfigurationEntries 中。
+
+5、根据这些配置类的全路径名读取并注册在 Spring 容器中
+
+
+
+### 19、spring-autoconfigure-metadata.properties
+
+spring.factories 和 spring-autoconfigure-metadata.properties 类似，都是位于 META-INF 目录下的文件，并且都是 Key-Value 形式保存数据。不同的是 ，后者的 Key 的格式为 `类的全路径名.自动装配条件`，Value 为 `类的全路径名`，使用逗号分隔。它管理的是 Bean 的装配条件。
+
+假设有两个类需要自动装配，但是有装配的顺序要求，这就无法仅仅依靠 spring.factories 来实现，于是有了 spring-autoconfigure-metadata.properties，他的 Key 后面追加名字就代表了对应的装配条件。
+
+```
+org.springframework.cloud.openfeign.encoding.FeignAcceptGzipEncodingAutoConfiguration.AutoConfigureAfter=org.springframework.cloud.openfeign.FeignAutoConfiguration
+```
+
+上面这段配置就代表 FeignAcceptGzipEncodingAutoConfiguration 必须在 FeignAutoConfiguration 装配之后再装配。
+
+### 20、@Import注解
+
++ @Import一个普通类 spring会将该[类加载](https://so.csdn.net/so/search?q=类加载&spm=1001.2101.3001.7020)到spring容器中
++ @Import一个类，该类实现了ImportBeanDefinitionRegistrar接口，在重写的registerBeanDefinitions方法里面，能拿到BeanDefinitionRegistry bd的注册器，能手工往beanDefinitionMap中注册 beanDefinition
++ @Import一个类 该类实现了ImportSelector 重写selectImports方法该方法返回了String[]数组的对象，数组里面的类都会注入到spring容器当中
+
+@Import注解执行的时机，解析配置类的时候，ConfigurationClassPostProcessor 扩展点当中的processImports来处理。
+3种类型的lei执行不同的逻辑
++ 实现了ImportSelector接口的类，调用getExclusionFilter()方法，如果不为空，那么就进行过滤，过滤后调用selectImports方法()，得到要注入的类的全限定名。根据类全限定名，得到类元信息。然后递归的调用processImports方法
++ 实现了ImportBeanDefinitionRegistrar接口的类，会实例化这个类，放入集合importBeanDefinitionRegistrars当中。
++ 普通类型的类（上面两个都不满足），那么就把它当作是配置类来处理，调用processConfigurationClass方法，最终会放入到configurationClasses这个集合当中。
 
 
 
