--- a/markdown笔记/面试篇/面试问题记录.md
+++ b/markdown笔记/面试篇/面试问题记录.md
@@ -6831,6 +6831,39 @@ isolation.level
 
 
 
+### 20、MQ 死信
+
+死信就是消息在特定场景下的一种表现形式，这些场景包括：
+
++ 消息被拒绝访问，即 RabbitMQ返回 basicNack 的信号时。 或者拒绝basicReject
++ 消费者发生异常，超过重试次数 。
++ 消息的 TTL 时间过期。
++ 消息队列达到最大长度。
+
+由于特定的原因导致queue中的某些消息无法被消费，这样的消息如果没有后续的处理，就变成了死信(Dead Letter)所有的死信都会放到死信队列中。“死信”消息会被RabbitMQ进行特殊处理，如果配置了死信队列信息，那么该消息将会被丢进死信队列中，如果没有配置，则该消息将会被丢弃。
+
+**死信队列就是用于储存死信的消息队列**，在死信队列中，有且只有死信构成，不会存在其余类型的消息。
+死信队列在 RabbitMQ 中并不会单独存在，往往死信队列都会绑定一个普通的消息队列，当所绑定的消息队列中，有消息变成死信了，那么这个消息就会重新被交换机路由到指定的死信队列中去，我们可以通过对这个死信队列进行监听，从而手动的去对这一消息进行补偿。
+
+```
+    //定义业务队列
+    @Bean
+    public Queue directQueue() {
+        return QueueBuilder.durable(QNAME)
+                .deadLetterExchange(DENAME) //通过这两个配置，使我们的业务队列与死信交换机有关系了
+                .deadLetterRoutingKey(DKEY)
+                .ttl(60*1000) //设置消息多久过期，消息超过这个时间就直接给死信交换机，让它处理
+                .maxLength(1000) //设置队列最大容量，超过这个容量就直接给死信交换机，让它处理
+                .build();
+    }
+```
+
+**应用场景**
+
+
+
+一般用在较为重要的业务队列中，确保未被正确消费的消息不被丢弃，一般发生消费异常可能原因主要有由于消息信息本身存在错误导致处理异常，处理过程中参数校验异常，或者因网络波动导致的查询异常等等，当发生异常时，当然不能每次通过日志来获取原消息，然后让运维帮忙重新投递消息。通过配置死信队列，可以让未正确处理的消息暂存到另一个队列中，待后续排查清楚问题后，编写相应的处理代码来处理死信消息，这样比手工恢复数据要好太多了 。
+
 
 
 ## 网络篇
